bindings/c/pnf_c.hpp

/// \brief Opaque chart handle.
    typedef struct PnfChart PnfChart;
/// \brief Opaque indicators handle.
    typedef struct PnfIndicators PnfIndicators;
/// \brief Signal type enumeration.
    typedef enum {
        PNF_SIGNAL_NONE = 0,
        PNF_SIGNAL_BUY = 1,
        PNF_SIGNAL_SELL = 2
    } PnfSignalType;
/// \brief Pattern type enumeration.
    typedef enum {
        PNF_PATTERN_NONE = 0,
        PNF_PATTERN_DOUBLE_TOP_BREAKOUT,
        PNF_PATTERN_DOUBLE_BOTTOM_BREAKDOWN,
        PNF_PATTERN_TRIPLE_TOP_BREAKOUT,
        PNF_PATTERN_TRIPLE_BOTTOM_BREAKDOWN,
        PNF_PATTERN_QUADRUPLE_TOP_BREAKOUT,
        PNF_PATTERN_QUADRUPLE_BOTTOM_BREAKDOWN,
        PNF_PATTERN_ASCENDING_TRIPLE_TOP,
        PNF_PATTERN_DESCENDING_TRIPLE_BOTTOM,
        PNF_PATTERN_BULLISH_CATAPULT,
        PNF_PATTERN_BEARISH_CATAPULT,
        PNF_PATTERN_BULLISH_SIGNAL_REVERSED,
        PNF_PATTERN_BEARISH_SIGNAL_REVERSED,
        PNF_PATTERN_BULLISH_TRIANGLE,
        PNF_PATTERN_BEARISH_TRIANGLE,
        PNF_PATTERN_LONG_TAIL_DOWN,
        PNF_PATTERN_HIGH_POLE,
        PNF_PATTERN_LOW_POLE,
        PNF_PATTERN_BULL_TRAP,
        PNF_PATTERN_BEAR_TRAP,
        PNF_PATTERN_SPREAD_TRIPLE_TOP,
        PNF_PATTERN_SPREAD_TRIPLE_BOTTOM
    } PnfPatternType;
/// \brief Indicator configuration parameters.
    typedef struct {
        int sma_short_period;
        int sma_medium_period;
        int sma_long_period;
        int bollinger_period;
        double bollinger_std_devs;
        int rsi_period;
        double rsi_overbought;
        double rsi_oversold;
        double bullish_alert_threshold;
        double bearish_alert_threshold;
        double support_resistance_threshold;
        int congestion_min_columns;
        double congestion_price_range;
    } PnfIndicatorConfig;
/// \brief PnfSignal.
    typedef struct {
        PnfSignalType type;
        int column_index;
        double price;
    } PnfSignal;
/// \brief PnfPattern.
    typedef struct {
        PnfPatternType type;
        int start_column;
        int end_column;
        double price;
        bool is_bullish;
    } PnfPattern;
/// \brief PnfSupportResistanceLevel.
    typedef struct {
        double price;
        int touch_count;
        bool is_support;
    } PnfSupportResistanceLevel;
/// \brief PnfDoubleArray.
    typedef struct {
        double* data;
        size_t length;
    } PnfDoubleArray;
/// \brief PnfSignalArray.
    typedef struct {
        PnfSignal* data;
        size_t length;
    } PnfSignalArray;
/// \brief PnfPatternArray.
    typedef struct {
        PnfPattern* data;
        size_t length;
    } PnfPatternArray;
/// \brief PnfLevelArray.
    typedef struct {
        PnfSupportResistanceLevel* data;
        size_t length;
    } PnfLevelArray;
    // Indicator configuration
/// \brief Indicators configure.
    /// \param ind 
    /// \param config 
    PNF_API void pnf_indicators_configure(PnfIndicators* ind, const PnfIndicatorConfig* config);
/// \brief Indicators set sma periods.
    /// \param ind 
    /// \param short_period 
    /// \param medium_period 
    /// \param long_period 
    PNF_API void pnf_indicators_set_sma_periods(PnfIndicators* ind, int short_period, int medium_period, int long_period);
/// \brief Indicators set bollinger params.
    /// \param ind 
    /// \param period 
    /// \param std_devs 
    PNF_API void pnf_indicators_set_bollinger_params(PnfIndicators* ind, int period, double std_devs);
/// \brief Indicators set rsi params.
    /// \param ind 
    /// \param period 
    /// \param overbought 
    /// \param oversold 
    PNF_API void pnf_indicators_set_rsi_params(PnfIndicators* ind, int period, double overbought, double oversold);
/// \brief Indicators set bullish percent thresholds.
    /// \param ind 
    /// \param bullish 
    /// \param bearish 
    PNF_API void pnf_indicators_set_bullish_percent_thresholds(PnfIndicators* ind, double bullish, double bearish);
/// \brief Indicators set support resistance threshold.
    /// \param ind 
    /// \param threshold 
    PNF_API void pnf_indicators_set_support_resistance_threshold(PnfIndicators* ind, double threshold);
/// \brief Indicators set congestion params.
    /// \param ind 
    /// \param min_columns 
    /// \param price_range 
    PNF_API void pnf_indicators_set_congestion_params(PnfIndicators* ind, int min_columns, double price_range);
    // Indicator calculation
/// \brief Indicators calculate.
    /// \param indicators 
    /// \param chart 
    PNF_API void pnf_indicators_calculate(PnfIndicators* indicators, const PnfChart* chart);
    // SMA values
/// \brief Indicators sma short.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_sma_short(const PnfIndicators* ind, int column);
/// \brief Indicators sma medium.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_sma_medium(const PnfIndicators* ind, int column);
/// \brief Indicators sma long.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_sma_long(const PnfIndicators* ind, int column);
/// \brief Indicators sma short values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_sma_short_values(const PnfIndicators* ind);
/// \brief Indicators sma medium values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_sma_medium_values(const PnfIndicators* ind);
/// \brief Indicators sma long values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_sma_long_values(const PnfIndicators* ind);
    // Bollinger values
/// \brief Indicators bollinger middle.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_bollinger_middle(const PnfIndicators* ind, int column);
/// \brief Indicators bollinger upper.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_bollinger_upper(const PnfIndicators* ind, int column);
/// \brief Indicators bollinger lower.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_bollinger_lower(const PnfIndicators* ind, int column);
/// \brief Indicators bollinger middle values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_bollinger_middle_values(const PnfIndicators* ind);
/// \brief Indicators bollinger upper values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_bollinger_upper_values(const PnfIndicators* ind);
/// \brief Indicators bollinger lower values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_bollinger_lower_values(const PnfIndicators* ind);
    // RSI values
/// \brief Indicators rsi.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_rsi(const PnfIndicators* ind, int column);
/// \brief Indicators rsi is overbought.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API bool pnf_indicators_rsi_is_overbought(const PnfIndicators* ind, int column);
/// \brief Indicators rsi is oversold.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API bool pnf_indicators_rsi_is_oversold(const PnfIndicators* ind, int column);
/// \brief Indicators rsi values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_rsi_values(const PnfIndicators* ind);
    // OBV values
/// \brief Indicators obv.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API double pnf_indicators_obv(const PnfIndicators* ind, int column);
/// \brief Indicators obv values.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_obv_values(const PnfIndicators* ind);
    // Bullish percent
/// \brief Indicators bullish percent.
    /// \param ind 
    /// \return 
    PNF_API double pnf_indicators_bullish_percent(const PnfIndicators* ind);
/// \brief Indicators is bullish alert.
    /// \param ind 
    /// \return 
    PNF_API bool pnf_indicators_is_bullish_alert(const PnfIndicators* ind);
/// \brief Indicators is bearish alert.
    /// \param ind 
    /// \return 
    PNF_API bool pnf_indicators_is_bearish_alert(const PnfIndicators* ind);
    // Signal detection
/// \brief Indicators current signal.
    /// \param ind 
    /// \return 
    PNF_API PnfSignalType pnf_indicators_current_signal(const PnfIndicators* ind);
/// \brief Indicators signal count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_signal_count(const PnfIndicators* ind);
/// \brief Indicators signal at.
    /// \param ind 
    /// \param index 
    /// \return 
    PNF_API PnfSignal pnf_indicators_signal_at(const PnfIndicators* ind, size_t index);
/// \brief Indicators signals.
    /// \param ind 
    /// \return 
    PNF_API PnfSignalArray pnf_indicators_signals(const PnfIndicators* ind);
/// \brief Indicators buy signal count.
    /// \param ind 
    /// \return 
    PNF_API int pnf_indicators_buy_signal_count(const PnfIndicators* ind);
/// \brief Indicators sell signal count.
    /// \param ind 
    /// \return 
    PNF_API int pnf_indicators_sell_signal_count(const PnfIndicators* ind);
    // Pattern detection
/// \brief Indicators pattern count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_pattern_count(const PnfIndicators* ind);
/// \brief Indicators bullish pattern count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_bullish_pattern_count(const PnfIndicators* ind);
/// \brief Indicators bearish pattern count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_bearish_pattern_count(const PnfIndicators* ind);
/// \brief Indicators pattern at.
    /// \param ind 
    /// \param index 
    /// \return 
    PNF_API PnfPattern pnf_indicators_pattern_at(const PnfIndicators* ind, size_t index);
/// \brief Indicators patterns.
    /// \param ind 
    /// \return 
    PNF_API PnfPatternArray pnf_indicators_patterns(const PnfIndicators* ind);
/// \brief Indicators bullish patterns.
    /// \param ind 
    /// \return 
    PNF_API PnfPatternArray pnf_indicators_bullish_patterns(const PnfIndicators* ind);
/// \brief Indicators bearish patterns.
    /// \param ind 
    /// \return 
    PNF_API PnfPatternArray pnf_indicators_bearish_patterns(const PnfIndicators* ind);
    // Support/Resistance
/// \brief Indicators support level count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_support_level_count(const PnfIndicators* ind);
/// \brief Indicators resistance level count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_resistance_level_count(const PnfIndicators* ind);
/// \brief Indicators is near support.
    /// \param ind 
    /// \param price 
    /// \param tolerance 
    /// \return 
    PNF_API bool pnf_indicators_is_near_support(const PnfIndicators* ind, double price, double tolerance);
/// \brief Indicators is near resistance.
    /// \param ind 
    /// \param price 
    /// \param tolerance 
    /// \return 
    PNF_API bool pnf_indicators_is_near_resistance(const PnfIndicators* ind, double price, double tolerance);
/// \brief Indicators support levels.
    /// \param ind 
    /// \return 
    PNF_API PnfLevelArray pnf_indicators_support_levels(const PnfIndicators* ind);
/// \brief Indicators resistance levels.
    /// \param ind 
    /// \return 
    PNF_API PnfLevelArray pnf_indicators_resistance_levels(const PnfIndicators* ind);
/// \brief Indicators support prices.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_support_prices(const PnfIndicators* ind);
/// \brief Indicators resistance prices.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_resistance_prices(const PnfIndicators* ind);
    // Congestion detection
/// \brief Indicators is in congestion.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API bool pnf_indicators_is_in_congestion(const PnfIndicators* ind, int column);
/// \brief Indicators congestion zone count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_congestion_zone_count(const PnfIndicators* ind);