bindings/rust/src/ffi.rs


    /// pnf_indicators_configure binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `config` - 
    pub fn pnf_indicators_configure(ind: *mut PnfIndicators, config: *const PnfIndicatorConfig);
    /// pnf_indicators_set_sma_periods binding API.
    pub fn pnf_indicators_set_sma_periods(
        ind: *mut PnfIndicators,
        short_period: c_int,
        medium_period: c_int,
        long_period: c_int,
    );
    /// pnf_indicators_set_bollinger_params binding API.
    pub fn pnf_indicators_set_bollinger_params(
        ind: *mut PnfIndicators,
        period: c_int,
        std_devs: f64,
    );
    /// pnf_indicators_set_rsi_params binding API.
    pub fn pnf_indicators_set_rsi_params(
        ind: *mut PnfIndicators,
        period: c_int,
        overbought: f64,
        oversold: f64,
    );
    /// pnf_indicators_set_bullish_percent_thresholds binding API.
    pub fn pnf_indicators_set_bullish_percent_thresholds(
        ind: *mut PnfIndicators,
        bullish: f64,
        bearish: f64,
    );
    /// pnf_indicators_set_support_resistance_threshold binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `threshold` - 
    pub fn pnf_indicators_set_support_resistance_threshold(ind: *mut PnfIndicators, threshold: f64);
    /// pnf_indicators_set_congestion_params binding API.
    pub fn pnf_indicators_set_congestion_params(
        ind: *mut PnfIndicators,
        min_columns: c_int,
        price_range: f64,
    );

    /// pnf_indicators_calculate binding API.
    ///
    /// # Arguments
    /// * `indicators` - 
    /// * `chart` - 
    pub fn pnf_indicators_calculate(indicators: *mut PnfIndicators, chart: *const PnfChart);

    /// pnf_indicators_sma_short binding API.
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_sma_short(ind: *const PnfIndicators, column: c_int) -> f64;
    /// pnf_indicators_sma_medium binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `column` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_sma_medium(ind: *const PnfIndicators, column: c_int) -> f64;
    /// pnf_indicators_sma_long binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `column` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_sma_long(ind: *const PnfIndicators, column: c_int) -> f64;
    /// pnf_indicators_sma_short_values binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_sma_short_values(ind: *const PnfIndicators) -> PnfDoubleArray;
    /// pnf_indicators_sma_medium_values binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_sma_medium_values(ind: *const PnfIndicators) -> PnfDoubleArray;
    /// pnf_indicators_sma_long_values binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_sma_long_values(ind: *const PnfIndicators) -> PnfDoubleArray;

    /// pnf_indicators_bollinger_middle binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `column` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_bollinger_middle(ind: *const PnfIndicators, column: c_int) -> f64;
    /// pnf_indicators_bollinger_upper binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `column` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_bollinger_upper(ind: *const PnfIndicators, column: c_int) -> f64;
    /// pnf_indicators_bollinger_lower binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `column` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_bollinger_lower(ind: *const PnfIndicators, column: c_int) -> f64;
    /// pnf_indicators_bollinger_middle_values binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_bollinger_middle_values(ind: *const PnfIndicators) -> PnfDoubleArray;
    /// pnf_indicators_bollinger_upper_values binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_bollinger_upper_values(ind: *const PnfIndicators) -> PnfDoubleArray;
    /// pnf_indicators_bollinger_lower_values binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_bollinger_lower_values(ind: *const PnfIndicators) -> PnfDoubleArray;

    /// pnf_indicators_rsi binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `column` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_rsi(ind: *const PnfIndicators, column: c_int) -> f64;
    /// pnf_indicators_rsi_is_overbought binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `column` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_rsi_is_overbought(ind: *const PnfIndicators, column: c_int) -> bool;
    /// pnf_indicators_rsi_is_oversold binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `column` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_rsi_is_oversold(ind: *const PnfIndicators, column: c_int) -> bool;
    /// pnf_indicators_rsi_values binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_rsi_values(ind: *const PnfIndicators) -> PnfDoubleArray;

    /// pnf_indicators_obv binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `column` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_obv(ind: *const PnfIndicators, column: c_int) -> f64;
    /// pnf_indicators_obv_values binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_obv_values(ind: *const PnfIndicators) -> PnfDoubleArray;

    /// pnf_indicators_bullish_percent binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_bullish_percent(ind: *const PnfIndicators) -> f64;
    /// pnf_indicators_is_bullish_alert binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_is_bullish_alert(ind: *const PnfIndicators) -> bool;
    /// pnf_indicators_is_bearish_alert binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_is_bearish_alert(ind: *const PnfIndicators) -> bool;

    /// pnf_indicators_current_signal binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_current_signal(ind: *const PnfIndicators) -> PnfSignalType;
    /// pnf_indicators_signal_count binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_signal_count(ind: *const PnfIndicators) -> usize;
    #[allow(dead_code)]
    /// pnf_indicators_signal_at binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `index` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_signal_at(ind: *const PnfIndicators, index: usize) -> PnfSignal;
    /// pnf_indicators_signals binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_signals(ind: *const PnfIndicators) -> PnfSignalArray;
    /// pnf_indicators_buy_signal_count binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_buy_signal_count(ind: *const PnfIndicators) -> c_int;
    /// pnf_indicators_sell_signal_count binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_sell_signal_count(ind: *const PnfIndicators) -> c_int;

    /// pnf_indicators_pattern_count binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_pattern_count(ind: *const PnfIndicators) -> usize;
    /// pnf_indicators_bullish_pattern_count binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_bullish_pattern_count(ind: *const PnfIndicators) -> usize;
    /// pnf_indicators_bearish_pattern_count binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_bearish_pattern_count(ind: *const PnfIndicators) -> usize;
    #[allow(dead_code)]
    /// pnf_indicators_pattern_at binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `index` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_pattern_at(ind: *const PnfIndicators, index: usize) -> PnfPattern;
    /// pnf_indicators_patterns binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_patterns(ind: *const PnfIndicators) -> PnfPatternArray;
    /// pnf_indicators_bullish_patterns binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_bullish_patterns(ind: *const PnfIndicators) -> PnfPatternArray;
    /// pnf_indicators_bearish_patterns binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_bearish_patterns(ind: *const PnfIndicators) -> PnfPatternArray;

    /// pnf_indicators_support_level_count binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_support_level_count(ind: *const PnfIndicators) -> usize;
    /// pnf_indicators_resistance_level_count binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_resistance_level_count(ind: *const PnfIndicators) -> usize;
    /// pnf_indicators_is_near_support binding API.
    pub fn pnf_indicators_is_near_support(
        ind: *const PnfIndicators,
        price: f64,
        tolerance: f64,
    ) -> bool;
    /// pnf_indicators_is_near_resistance binding API.
    pub fn pnf_indicators_is_near_resistance(
        ind: *const PnfIndicators,
        price: f64,
        tolerance: f64,
    ) -> bool;
    /// pnf_indicators_support_levels binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_support_levels(ind: *const PnfIndicators) -> PnfLevelArray;
    /// pnf_indicators_resistance_levels binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_resistance_levels(ind: *const PnfIndicators) -> PnfLevelArray;
    /// pnf_indicators_support_prices binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_support_prices(ind: *const PnfIndicators) -> PnfDoubleArray;
    /// pnf_indicators_resistance_prices binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_resistance_prices(ind: *const PnfIndicators) -> PnfDoubleArray;

    /// pnf_indicators_is_in_congestion binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    /// * `column` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_is_in_congestion(ind: *const PnfIndicators, column: c_int) -> bool;
    /// pnf_indicators_congestion_zone_count binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_congestion_zone_count(ind: *const PnfIndicators) -> usize;
